# starmap-obe

./: .gitignore  README.md
examples/StarmapLinuxTest/: main.cpp
examples/StarmapMacOS/: CMakeLists.txt  main.cpp
examples/StarmapPico/: CMakeLists.txt  blink.cpp  main.cpp
examples/StarmapPico/tests/: CMakeLists_blink.txt  CMakeLists_hello_rtc.txt  CMakeLists_test_display.txt
examples/StarmapProject/: StarmapProject.ino
examples/StarmapRPiZero/: CMakeLists.txt  CMakeLists.txt_lib2  main.cpp  run.sh  starmap-obe.service
examples/screentest/: CMakeLists.txt
examples/test_gps/: CMakeLists.txt  main.cpp
lib/display/Config/: CMakeLists.txt
lib/display/Fonts/: CMakeLists.txt
lib/display/GUI/: CMakeLists.txt
lib/display/LCD/: CMakeLists.txt  LCD_0in96.h  LCD_1in28.c  LCD_1in28.h
lib/lwgps/src/lwgps/: lwgps.c
lib/lwrb/: CMakeLists.txt
lib/lwrb/src/lwrb/: lwrb.c
misc/: template hexadecimal pixel art.xlsx
misc/img inspiration/: pluto.aseprite
misc/planets/: moon pixel art.xlsx  moon-phases-pixel-art.aseprite  moon-phases-pixel-art8x8.aseprite  planets and moon pixel art.xlsx  pluto.aseprite
src/: Starmap.cpp  Starmap.h  arrays.cpp  arrays.h
